Overview of changes in lightdm 1.5.3

    * Fix build with gobject-introspection 1.35.9

Overview of changes in lightdm 1.5.2

    * Fix stale X server being left behind when using LockSession D-Bus API
    * Adjust AppArmor profile to also work with logind
    * Don't use GIO to access X authority files - it uses GVFS which is
      unnecessary overhead/complexity
    * Handle over/underflows when reading from greeter
    * Improve warning message when XDMCP packet has length mismatch
    * Only report test command line if it fails
    * Add more regression tests

Overview of changes in lightdm 1.5.1

    * QLightDM: Add Qt5 version of the library: liblightdm-qt5-2
    * QLightDM: Add some missing role names in UsersModel
    * QLightDM: Add a backgroundPath role to UsersModel
    * QLightDM: Fix potential crash in QLightDM::UsersModel closedown.
    * Improve guest session apparmor
    * Run each test in its own /tmp dir so they can't interfere with eachother
    * Fix script hooks no longer working with latest glib
    * Fix display clean up code

Overview of changes in lightdm 1.5.0

    * Add man page for lightdm-set-defaults
    * Use xzip for distribution, don't distribute old metadata
    * Correctly check if display is active when session quits
    * Relicense liblightdm to LGPL-2/LGPL-3 so GPL-2 code can link against it
    * Selectively lock memory rather than calling mlockall for main daemon

Overview of changes in lightdm 1.4.1

    * Fix autologin PAM configuration

Overview of changes in lightdm 1.4.0

    * Correctly implement and test autologin timeouts
    * Add greeter-show-remote-login hint
    * Correctly annotate enums in vapi file
    * QLightDM: Add default constructor to Qt power interface
    * QLightDM: Expose image path in UserModel
    * QLightDM: Add parameter to session model to show either local or remote
      sessions
    * Fix race conditions in tests

Overview of changes in lightdm 1.3.3
