@@ -1,6 +1,7 @@
 Overview of changes in lightdm 1.5.3
 
     * Fix build with gobject-introspection 1.35.9
+    * Fix authentication cancel regression caused in 1.5.2
 
 Overview of changes in lightdm 1.5.2
 
